//
// Protocol buffers definition for ---
//
syntax = "proto3";

message PartitionMessage {
	string id = 1;
	string masterURL= 2;
}
message StartServerRequest {
	string serverId = 1;
	string URL = 2;
	float minDelay = 3;
	float maxDelay = 4;

	repeated PartitionMessage partitions = 5;
}

message StartServerResponse {
	//empty
}

message StartClientRequest {
	string username = 1;
	string URL = 2;
	string scriptFile = 3;
	string defaultServerUrl = 4;
}

message StartClientResponse {
	//empty
}

service ProcessCreationService {
  rpc startServer(StartServerRequest) returns (StartServerResponse);
  rpc startClient(StartClientRequest) returns (StartClientResponse);
}