//
// Protocol buffers definition for DADI-GSTORE server
//
syntax = "proto3";


message ReadRequest{
  string partitionId = 1;
  string objectId = 2;
}

message ReadResponse{
  string objectValue = 1;
}

message ReadAdvancedRequest {
  string partitionId = 1;
  string objectId = 2;
}

message ReadAdvancedResponse {
  string objectValue = 1;
  int32 timestamp = 2;
}

message WriteRequest{
  string partitionId = 1;
  string objectId = 2;
  string objectValue = 3;
}

message WriteResponse{
  oneof response {
    string responseMessage = 1;
    ServerUrlResponse masterServerUrl = 2;
  }
}

message WriteAdvancedRequest {
  string partitionId = 1;
  string objectId = 2;
  string objectValue = 3;
}

message WriteAdvancedResponse {
  oneof response {
    int32 timestamp = 1;
    ServerUrlResponse masterServerUrl = 2;
  }
}

message ListServerRequest{
  /*nothing*/
}

message ListServerResponseEntity{
  string objectId = 1;
  string objectValue = 2;
  bool isMaster = 3;
}

message ListServerResponse{
  repeated ListServerResponseEntity objects = 1;
}

message ListPartitionGlobalRequest {
    string partitionId = 1;
}

message ListPartitionGlobalResponse {
    repeated string objectIds = 1;
}

message ServerUrlRequest{
  string serverId = 1;
}

message ServerUrlResponse{
  string serverUrl = 1;
}

service DIDAService{
  rpc write(WriteRequest) returns (WriteResponse);
  rpc read(ReadRequest) returns (ReadResponse);

  rpc writeAdvanced(WriteAdvancedRequest) returns (WriteAdvancedResponse);  
  rpc readAdvanced(ReadAdvancedRequest) returns (ReadAdvancedResponse);

  rpc listServer(ListServerRequest) returns (ListServerResponse);
  rpc getServerUrl(ServerUrlRequest) returns (ServerUrlResponse);

  //

  rpc listPartitionGlobal(ListPartitionGlobalRequest) returns (ListPartitionGlobalResponse);
}